<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="2dp"
    app:cardCornerRadius="5dp"
    app:elevation="1dp">

    <RelativeLayout
        android:id="@+id/zone_card_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/album_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_share_white_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="?selectableItemBackground"
                android:orientation="horizontal"
                android:padding="5dp">
                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/head_pic"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center_vertical|right"
                        android:src="@drawable/ic_appicon"/>
                    <TextView
                        android:id="@+id/name_text"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/default_name"
                        android:textSize="12sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/recommend_music"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/recommend_music"
                        android:textSize="21sp" />

                    <TextView
                        android:id="@+id/recommend_detail"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/recommend_details"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_zan_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/default_date"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right">

                    <TextView
                        android:id="@+id/people_zan"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/default_people_zan"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/zan_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/people_zan"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/zan_png"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_favorite_border_white_24dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>